--- a/src/tests/testnotebook3.ipynb
+++ b/src/tests/testnotebook3.ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c36a12ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'functions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdifferentiate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m hessian\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvector\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvct\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfunctions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m vector_module\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'functions'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(\"/home/filippo/Github/Varational-Monte-Carlo/src/classes\"))\n",
+    "sys.path.append(os.path.abspath(\"/home/filippo/Github/Varational-Monte-Carlo/src\"))\n",
     "\n",
     "import numpy as np\n",
     "import Montecarlo\n",
     "from scipy.differentiate import hessian\n",
-    "import vector as vct"
+    "import vector as vct\n",
+    "from functions import vector_module"
    ]
   },
   {
@@ -44,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "79386cb7",
    "metadata": {},
    "outputs": [
@@ -52,103 +66,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.]\n",
-      "0.0\n",
-      "1.0\n"
+      "[-1  1  1]\n"
      ]
     }
    ],
    "source": [
-    "a = np.zeros(1)\n",
-    "b = np.ones_like(a)\n",
+    "x, y = np.array([1,2,3]), np.array([2,1,2])\n",
     "\n",
-    "print(b)\n",
-    "\n",
-    "for p,d in zip(a,b):\n",
-    "    print(p)\n",
-    "    print(d)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "f38e9186",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[1, 2],\n",
-      "       [1, 3]]), [1, 2, 3])\n",
-      "([1, 3, 4],)\n",
-      "(array([1., 2., 3.]), array([1., 3., 4.]))\n",
-      "((array([1., 2., 3.]), array([1., 3., 4.])),)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def f(*args):\n",
-    "    print(args)\n",
-    "\n",
-    "def g(f, *args):\n",
-    "    a = np.array(args, dtype=np.float64)\n",
-    "    print(tuple(a))\n",
-    "    f(tuple(a))\n",
-    "\n",
-    "f(np.array([[1,2],[1,3]]), [1,2,3])\n",
-    "f([1,3,4])\n",
-    "g(f, [1,2,3], [1,3,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "ff4072da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "([1, 2, 3], [1, 3, 4])\n",
-      "(array([1, 2, 3]), array([1, 3, 4]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "r = [1,2,3],[1,3,4]\n",
-    "print(r)\n",
-    "arr = np.array(r)\n",
-    "b = tuple(arr)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "aab397fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2\n",
-      "(1, 2, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(*np.array([1,2]))\n",
-    "\n",
-    "f(*[1,2,3])"
+    "print(vector_x-y)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf2778f",
+   "id": "cb113588",
    "metadata": {},
    "outputs": [],
    "source": []
